--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </nav>
 
-    <!-- Carrusel de imágenes -->
+
     <div id="carouselAutos" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button
@@ -357,3 +357,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
+hola anda
