--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -56,7 +56,7 @@
     <div class="container mt-4">
       <h1 class="mb-4">Sobre Nosotros</h1>
 
-      <!-- Sección AUTOVIP con imagen y texto lado a lado -->
+      <!-- Sección AUTOVIP -->
       <div class="row mb-5 align-items-center">
         <div class="col-md-6">
           <img
@@ -171,15 +171,9 @@
                 saepe et quisquam nesciunt maxime.
               </p>
               <div>
-                <a href="#"
-                  ><img src="img/facebook.png" alt="Facebook" width="24"
-                /></a>
-                <a href="#"
-                  ><img src="img/linkedin.png" alt="LinkedIn" width="24"
-                /></a>
-                <a href="#"
-                  ><img src="img/twitter.png" alt="Twitter" width="24"
-                /></a>
+                <i class="bi bi-linkedin"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-facebook"></i>
               </div>
             </div>
           </div>
@@ -187,12 +181,9 @@
       </div>
     </div>
 
-    <!-- Modal de Contacto (mismo que en index.html) -->
-    <div class="modal fade" id="contactoModal" tabindex="-1">
-      <!-- ... mismo contenido del modal ... -->
-    </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
   </body>
 </html>
