--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AutoVIP - Sobre Nosotros</title>
-    <<<<<<< HEAD
-    <!-- CSS de Boostrap -->
-    =======
+
     <!-- Bootstrap CSS -->
-    >>>>>>> 0d65eea80c008cba4bf4166b71e3cac899ae9fda
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +17,7 @@
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html">AUTOVIP</a>
+        <h1 class="navbar-brand" href="index.html">AUTOVIP</h1>
         <button
           class="navbar-toggler"
           type="button"
@@ -30,9 +28,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="ventas.html">Ventas</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="ventas.html">Venta Okm</a>
             </li>
@@ -56,15 +51,15 @@
       </div>
     </nav>
 
-    <!-- Contenido principal -->
+    <!-- Sobre Nosotros -->
     <div class="container mt-4">
       <h1 class="mb-4">Sobre Nosotros</h1>
 
-      <!-- Sección AUTOVIP -->
+      <!-- AUTOVIP -->
       <div class="row mb-5 align-items-center">
         <div class="col-md-6">
           <img
-            src="img/about.jpg"
+            src="about.jpg"
             alt="Salón de autos"
             class="img-fluid rounded shadow"
           />
@@ -100,7 +95,7 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100 text-center">
             <img
-              src="img/cofounder_1.jpg"
+              src="cofounder_1.jpg"
               class="card-img-top"
               alt="Juan Pérez"
               style="height: 220px; object-fit: cover"
@@ -113,15 +108,9 @@
                 saepe et quisquam nesciunt maxime.
               </p>
               <div>
-                <a href="#"
-                  ><img src="img/facebook.png" alt="Facebook" width="24"
-                /></a>
-                <a href="#"
-                  ><img src="img/linkedin.png" alt="LinkedIn" width="24"
-                /></a>
-                <a href="#"
-                  ><img src="img/twitter.png" alt="Twitter" width="24"
-                /></a>
+                <i class="bi bi-linkedin"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-facebook"></i>
               </div>
             </div>
           </div>
@@ -131,7 +120,7 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100 text-center">
             <img
-              src="img/maria.jpg"
+              src="cofounder_2.jpg"
               class="card-img-top"
               alt="María Rodríguez"
               style="height: 220px; object-fit: cover"
@@ -144,15 +133,9 @@
                 saepe et quisquam nesciunt maxime.
               </p>
               <div>
-                <a href="#"
-                  ><img src="img/facebook.png" alt="Facebook" width="24"
-                /></a>
-                <a href="#"
-                  ><img src="img/linkedin.png" alt="LinkedIn" width="24"
-                /></a>
-                <a href="#"
-                  ><img src="img/twitter.png" alt="Twitter" width="24"
-                /></a>
+                <i class="bi bi-linkedin"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-facebook"></i>
               </div>
             </div>
           </div>
@@ -162,7 +145,7 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100 text-center">
             <img
-              src="img/juan2.jpg"
+              src="cofounder_3.jpg"
               class="card-img-top"
               alt="Juan Gómez"
               style="height: 220px; object-fit: cover"
@@ -174,10 +157,17 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
                 saepe et quisquam nesciunt maxime.
               </p>
+
               <div>
-                <i class="bi bi-linkedin"></i>
-                <i class="bi bi-twitter"></i>
-                <i class="bi bi-facebook"></i>
+                <a href="https://linkedin.com/" target="_blank">
+                  <i class="bi bi-linkedin text-primary fs-3"></i>
+                </a>
+                <a href="https://twitter.com/" target="_blank">
+                  <i class="bi bi-twitter text-primary fs-3"></i>
+                </a>
+                <a href="https://facebook.com/" target="blank">
+                  <i class="bi bi-facebook text-primary fs-3"></i>
+                </a>
               </div>
             </div>
           </div>
