--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -76,7 +76,7 @@
         <div class="col-md-5">
           <div class="bg-white rounded shadow p-2 h-100">
             <img
-              src="about.jpg"
+              src="img/about.jpg"
               alt="Salón de autos"
               class="img-fluid rounded"
               style="width: 100%; height: 320px; object-fit: cover"
@@ -133,7 +133,7 @@
           <div class="card h-100 text-center border-1">
             <!-- Imagen del cofundador -->
             <img
-              src="cofounder_1.jpg"
+              src="/img/cofounder_1.jpg"
               class="card-img-top"
               alt="Juan Pérez"
               style="height: 220px; object-fit: cover"
@@ -174,7 +174,7 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100 text-center border-1">
             <img
-              src="cofounder_2.jpg"
+              src="img/cofounder_2.jpg"
               class="card-img-top"
               alt="María Rodríguez"
               style="height: 220px; object-fit: cover"
@@ -214,7 +214,7 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100 text-center border-1">
             <img
-              src="cofounder_3.jpg"
+              src="img/cofounder_3.jpg"
               class="card-img-top"
               alt="Juan Gómez"
               style="height: 220px; object-fit: cover"
