--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="container text-md-start my-6">
     <h1>Bienvenido a <span>AUTO<span class="fw-bold text-dark">VIP</span></span></h1>
  
-    <img src="img/automotora_vip_logo.png "> 
+    <img src=""> 
  
   </div>
 
@@ -162,7 +162,7 @@
             <p class="card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet.
             </p>
-            <a href="#" class="btn btn-primary">Ver autos</a>
+            <a href="#" class="btn btn-secondary">Ver autos</a>
           </div>
         </div>
       </div>
@@ -192,7 +192,7 @@
             <p class="card-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet.
             </p>
-            <a href="#" class="btn btn-primary">Ver autos</a>
+            <a href="#" class="btn btn-secondary">Ver autos</a>
           </div>
         </div>
      
