--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -230,20 +230,20 @@
               </p>
               <div>
                 <a
-                  href="https://facebook.com/juangomez"
+                  href="https://facebook.com"
                   target="_blank"
                   class="me-2"
                 >
                   <i class="bi bi-facebook text-info fs-4"></i>
                 </a>
                 <a
-                  href="https://linkedin.com/in/juangomez"
+                  href="https://linkedin.com"
                   target="_blank"
                   class="me-2"
                 >
                   <i class="bi bi-linkedin text-info fs-4"></i>
                 </a>
-                <a href="https://twitter.com/juangomez" target="_blank">
+                <a href="https://twitter.com" target="_blank">
                   <i class="bi bi-twitter text-info fs-4"></i>
                 </a>
               </div>
