--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -4,26 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AutoVIP - Sobre Nosotros</title>
-    <!-- Bootstrap CSS: Framework para estilos y responsive -->
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- Bootstrap Icons: Íconos para redes sociales y otros -->
+    <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
-    <!-- CSS personalizado para colores y detalles visuales -->
+    <!-- CSS  -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- =========================
-         Barra de navegación principal
-         ========================= -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <!-- Logo textual AUTOVIP (izquierda) -->
         <a
           class="navbar-brand d-flex align-items-center"
           href="index.html"
@@ -32,7 +28,7 @@
           <span style="color: #fff">AUTO</span
           ><span class="fw-bold" style="color: #fff">VIP</span>
         </a>
-        <!-- Botón hamburguesa para menú móvil -->
+
         <button
           class="navbar-toggler"
           type="button"
@@ -41,38 +37,30 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- Menú de navegación (derecha) -->
+        <!-- Menú -->
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <!-- Enlaces de navegación -->
+            <!-- Enlaces -->
             <li class="nav-item">
-              <a class="nav-link" href="#">Venta Okm</a>
+              <a class="nav-link" href="ventas.html">Venta Okm</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Venta Usados</a>
+              <a class="nav-link" href="ventas.html">Venta Usados</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sobre Nosotros</a>
+              <a class="nav-link" href="sobre_nosotros.html">Sobre Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <!-- =========================
-         Fin barra de navegación
-         ========================= -->
 
-    <!-- =========================
-         Sección Sobre Nosotros
-         ========================= -->
     <div class="container mt-4">
-      <!-- Título principal -->
       <h1 class="mb-4" style="font-weight: 400">Sobre Nosotros</h1>
       <div class="row mb-5">
-        <!-- Imagen del salón de autos (izquierda) -->
         <div class="col-md-5">
           <div class="bg-white rounded shadow p-2 h-100">
             <img
@@ -83,17 +71,16 @@
             />
           </div>
         </div>
-        <!-- Texto descriptivo (derecha, alineado a la izquierda, sin fondo ni sombra) -->
+
         <div class="col-md-7 d-flex align-items-center">
           <div class="w-100">
-            <!-- Logo textual AUTOVIP -->
             <h2
               class="mb-2 text-start"
               style="font-weight: 400; font-size: 2rem"
             >
               AUTO<span class="fw-bold">VIP</span>
             </h2>
-            <!-- Texto de ejemplo -->
+
             <p class="mb-2 text-start" style="font-size: 1rem">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed
               voluptate nihil eum consectetur similique? Consectetur, quod,
@@ -112,26 +99,19 @@
               ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti
               necessitatibus perspiciatis quis?
             </p>
-            <!-- Botón de contacto alineado a la izquierda -->
+
             <button class="btn btn-outline-secondary btn-sm align-self-start">
               <i class="bi bi-envelope me-1"></i>Contacto
             </button>
           </div>
         </div>
       </div>
-      <!-- =========================
-           Fin sección Sobre Nosotros
-           ========================= -->
 
-      <!-- =========================
-           Sección Nuestro Equipo
-           ========================= -->
       <h2 class="mb-4" style="font-weight: 400">Nuestro Equipo</h2>
       <div class="row">
-        <!-- Tarjeta 1: Juan Pérez -->
+        <!--  Juan Pérez -->
         <div class="col-md-4 mb-4">
           <div class="card h-100 text-center border-1">
-            <!-- Imagen del cofundador -->
             <img
               src="/img/cofounder_1.jpg"
               class="card-img-top"
@@ -147,30 +127,22 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
                 saepe et quisquam nesciunt maxime.
               </p>
-              <!-- Redes sociales con links reales -->
+
               <div>
-                <a
-                  href="https://facebook.com/juanperez"
-                  target="_blank"
-                  class="me-2"
-                >
+                <a href="https://facebook.com" target="_blank" class="me-2">
                   <i class="bi bi-facebook text-info fs-4"></i>
                 </a>
-                <a
-                  href="https://linkedin.com/in/juanperez"
-                  target="_blank"
-                  class="me-2"
-                >
+                <a href="https://linkedin.com" target="_blank" class="me-2">
                   <i class="bi bi-linkedin text-info fs-4"></i>
                 </a>
-                <a href="https://twitter.com/juanperez" target="_blank">
+                <a href="https://twitter.com" target="_blank">
                   <i class="bi bi-twitter text-info fs-4"></i>
                 </a>
               </div>
             </div>
           </div>
         </div>
-        <!-- Tarjeta 2: María Rodríguez -->
+        <!-- María Rodríguez -->
         <div class="col-md-4 mb-4">
           <div class="card h-100 text-center border-1">
             <img
@@ -189,28 +161,20 @@
                 saepe et quisquam nesciunt maxime.
               </p>
               <div>
-                <a
-                  href="https://facebook.com/mariarodriguez"
-                  target="_blank"
-                  class="me-2"
-                >
+                <a href="https://facebook.com" target="_blank" class="me-2">
                   <i class="bi bi-facebook text-info fs-4"></i>
                 </a>
-                <a
-                  href="https://linkedin.com/in/mariarodriguez"
-                  target="_blank"
-                  class="me-2"
-                >
+                <a href="https://linkedin.com" target="_blank" class="me-2">
                   <i class="bi bi-linkedin text-info fs-4"></i>
                 </a>
-                <a href="https://twitter.com/mariarodriguez" target="_blank">
+                <a href="https://twitter.com" target="_blank">
                   <i class="bi bi-twitter text-info fs-4"></i>
                 </a>
               </div>
             </div>
           </div>
         </div>
-        <!-- Tarjeta 3: Juan Gómez -->
+        <!-- Juan Gómez -->
         <div class="col-md-4 mb-4">
           <div class="card h-100 text-center border-1">
             <img
@@ -229,18 +193,10 @@
                 saepe et quisquam nesciunt maxime.
               </p>
               <div>
-                <a
-                  href="https://facebook.com"
-                  target="_blank"
-                  class="me-2"
-                >
+                <a href="https://facebook.com" target="_blank" class="me-2">
                   <i class="bi bi-facebook text-info fs-4"></i>
                 </a>
-                <a
-                  href="https://linkedin.com"
-                  target="_blank"
-                  class="me-2"
-                >
+                <a href="https://linkedin.com" target="_blank" class="me-2">
                   <i class="bi bi-linkedin text-info fs-4"></i>
                 </a>
                 <a href="https://twitter.com" target="_blank">
@@ -251,18 +207,11 @@
           </div>
         </div>
       </div>
-      <!-- =========================
-           Fin sección Nuestro Equipo
-           ========================= -->
     </div>
 
-    <!-- =========================
-         Footer
-         ========================= -->
     <footer class="bg-dark text-white mt-5 pt-4 pb-2 custom-footer">
       <div class="container">
         <div class="row align-items-start">
-          <!-- Logo textual AUTOVIP (izquierda) -->
           <div
             class="col-md-3 mb-3 mb-md-0 d-flex align-items-center justify-content-md-start justify-content-center"
           >
@@ -271,7 +220,7 @@
               >VIP</span
             >
           </div>
-          <!-- Enlaces rápidos (centro, dos columnas) -->
+
           <div class="col-md-6 mb-3 mb-md-0">
             <div class="row">
               <div class="col-6 text-md-start text-center">
@@ -284,7 +233,7 @@
               </div>
             </div>
           </div>
-          <!-- Copyright (derecha) -->
+
           <div
             class="col-md-3 text-md-end text-center d-flex align-items-center justify-content-md-end justify-content-center"
           >
