--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -48,7 +48,7 @@
               <a class="nav-link" href="ventas.html">Venta Usados</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="sobre_nosotros.html">Sobre Nosotros</a>
+              <a class="nav-link" href="sobre-nosotros.html">Sobre Nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contacto.html">Contacto</a>
