--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -16,17 +16,22 @@
     />
     <!-- CSS  -->
     <link rel="stylesheet" href="styles.css" />
+    <style>
+      .logo-img {
+        height: 40px; /* Ajusta según sea necesario */
+        width: auto;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a
-          class="navbar-brand d-flex align-items-center"
-          href="index.html"
-          style="font-size: 2.5rem; letter-spacing: 2px"
-        >
-          <span style="color: #fff">AUTO</span
-          ><span class="fw-bold" style="color: #fff">VIP</span>
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
+          <img
+            src="img/automotora_vip_logo.png"
+            alt="AutoVIP"
+            class="logo-img"
+          />
         </a>
 
         <button
@@ -78,7 +83,11 @@
               class="mb-2 text-start"
               style="font-weight: 400; font-size: 2rem"
             >
-              AUTO<span class="fw-bold">VIP</span>
+              <img
+                src="img/automotora_vip_logo.png"
+                alt="AutoVIP"
+                class="logo-img"
+              />
             </h2>
 
             <p class="mb-2 text-start" style="font-size: 1rem">
@@ -100,9 +109,12 @@
               necessitatibus perspiciatis quis?
             </p>
 
-            <button class="btn btn-outline-secondary btn-sm align-self-start">
+            <a
+              href="contacto.html"
+              class="btn btn-outline-secondary btn-sm align-self-start"
+            >
               <i class="bi bi-envelope me-1"></i>Contacto
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -113,7 +125,7 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100 text-center border-1">
             <img
-              src="/img/cofounder_1.jpg"
+              src="img/cofounder_1.jpg"
               class="card-img-top"
               alt="Juan Pérez"
               style="height: 220px; object-fit: cover"
@@ -215,21 +227,42 @@
           <div
             class="col-md-3 mb-3 mb-md-0 d-flex align-items-center justify-content-md-start justify-content-center"
           >
-            <span style="font-size: 1.5rem; color: #fff">AUTO</span
-            ><span class="fw-bold" style="font-size: 1.5rem; color: #fff"
-              >VIP</span
-            >
+            <img
+              src="img/automotora_vip_logo.png"
+              alt="AutoVIP"
+              class="logo-img"
+            />
           </div>
 
           <div class="col-md-6 mb-3 mb-md-0">
             <div class="row">
               <div class="col-6 text-md-start text-center">
-                <div>Venta Okm</div>
-                <div>Venta Okm</div>
+                <div>
+                  <a href="ventas.html" class="text-white text-decoration-none"
+                    >Venta Okm</a
+                  >
+                </div>
+                <div>
+                  <a href="ventas.html" class="text-white text-decoration-none"
+                    >Venta Usados</a
+                  >
+                </div>
               </div>
               <div class="col-6 text-md-start text-center">
-                <div>Sobre Nosotros</div>
-                <div>Contacto</div>
+                <div>
+                  <a
+                    href="sobre-nosotros.html"
+                    class="text-white text-decoration-none"
+                    >Sobre Nosotros</a
+                  >
+                </div>
+                <div>
+                  <a
+                    href="contacto.html"
+                    class="text-white text-decoration-none"
+                    >Contacto</a
+                  >
+                </div>
               </div>
             </div>
           </div>
@@ -242,5 +275,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
