--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <button class="nav-link" data-toggle="modal" data-target="#contactModal">Contacto</button>
 
      
-    <div class="modal fade" id="contactModal" tabindex="-" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
+    <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
